--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              <h1 class="text-base font-semibold text-primary md:text-xl ">Halo Semua 👋, 
                 saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Samshi Yudha Prtama</span></h1>
              <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Mahasiswa</h2>
-             <p class="font-meduim text-slate-400 mb-10 leading-relaxed ">saya seorang manusia</p> 
+             <p class="font-meduim text-slate-400 mb-10 leading-relaxed ">Saya</p> 
            </div>
            <div class="w-full self-end px-4 lg:w-1/2 ">
             <div class="relative mt-10 lg:mt-9 lg:right-0" >
