--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              <h1 class="text-base font-semibold text-primary md:text-xl ">Halo Semua 👋, 
                 saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Samshi Yudha Prtama</span></h1>
              <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Mahasiswa</h2>
-             <p class="font-meduim text-slate-400 mb-10 leading-relaxed ">Saya</p> 
+             <p class="font-meduim text-slate-400 mb-10 leading-relaxed "></p> 
            </div>
            <div class="w-full self-end px-4 lg:w-1/2 ">
             <div class="relative mt-10 lg:mt-9 lg:right-0" >
@@ -75,12 +75,12 @@
         <div class="flex flex-wrap">
            <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk,belajar Web</h2>
-            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut deleniti officiis veniam dolorum facilis ducimus reprehenderit?</p>
+            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl"></h2>
+            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg"> Hello, saya Samshi Yudha mahasiawa ULBI D4 Teknik Informatika ingin menjadi seorang developer yang handal dan sukses</p>
            </div>
            <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari berteman</h3>
-            <p class="font-medium text-base text-secondary mb-6 ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At porro dicta aliquid? Repellendus, eaque veritatis.</p>
+            <p class="font-medium text-base text-secondary mb-6 "></p>
             <div
             class="flex items-center">
                 <!-- Instagram -->
