--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
    <!-- Footer Strat -->
 
-   <footer class="bg-abu pt-15 pb-12 mt-10">
+   <footer class="bg-abu pt-15 pb-12 mt-10">    `
     <div class="container">
         <div class="flex flex-wrap">
             <div class="w-full pt-10 border-t border-slate-100 text-white ">
@@ -220,5 +220,6 @@
 
 
    <script src="src/script.js"></script>
+   <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 </body>
 </html>
