--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
         <div class="w-full px-4">
             <div class="max-w-xl mx-auto text-center mb-16">
                 <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-                <h2 class="font-bold text-dark text-3xl mb-4">Proyek</h2>
+                <h2 class="font-bold text-dark text-3xl mb-4"></h2>
                 <p class="font-medium text-md text-secondary">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe optio iusto perspiciatis neque beatae consequuntur!
                 </p>
             </div>
         </div>
@@ -127,10 +126,10 @@
             <!-- Proyek 1 -->
             <div class="mb-12 p-4 w-full md:w-1/2">
                 <div class="rounded-md shadow-md overflow-hidden">
-                    <img src="img/tes.jpg" alt="Screenshot proyek web buatan Samshi Yudha" class="w-full h-auto">
+                    <img src="img/spp.jpg" alt="Screenshot proyek web buatan Samshi Yudha" class="w-full h-auto">
                 </div>
-                <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Samshi Yudha Membuat Web</h3>
-                <p class="font-medium text-base text-secondary">Lorem ipsum text placeholder...</p>
+                <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Bayar SPP</h3>
+                <p class="font-medium text-base text-secondary">sistem pembayaran spp</p>
             </div>  
 
             <!-- Proyek 2 -->
@@ -153,7 +152,6 @@
                     <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4">Hungungi Saya</h2>
                     <p class="font-medium text-md text-secondary">
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, vel.
                     </p>
                 </div>
             </div>
@@ -220,6 +218,7 @@
 
 
    <script src="src/script.js"></script>
+   <!-- traker -->
    <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 </body>
 </html>
