--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
            <div class="w-full self-center px-4 lg:w-1/2">
              <h1 class="text-base font-semibold text-primary md:text-xl ">Halo Semua 👋, 
                 saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Samshi Yudha Prtama</span></h1>
-             <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Mahasiswa</h2>
+             <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl"></h2>
              <p class="font-meduim text-slate-400 mb-10 leading-relaxed "></p> 
            </div>
            <div class="w-full self-end px-4 lg:w-1/2 ">
@@ -200,10 +200,9 @@
 
                 <!-- Gmail -->
                 <a 
-                href="mailto:samshiyudha@gmail.com" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-krem hover:bg-krem hover:text-white">
+                href="mailto:samshiyudha9@gmail.com" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-krem hover:bg-krem hover:text-white">
                 <svg role="img" width="20" class="fill-current"viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Gmail</title><path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z"/></svg>
                 </a> 
-
             </div>
 
                 <div class="flex flex-wrap justify-center mb-5">
